[platform] making the IDE use the same (platform) VM options charset as launchers
(IDEA-240526 preparatory work)

GitOrigin-RevId: aa2b100f72b6fe0cbcf9afaa398495e4d61362af